--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -19,7 +19,7 @@
 
   #greeting {
     margin: 0;
-    position: relative;
+    position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
