Small fixes to contact me page. Added in header.

--- a/src/sass/pages/_contact.scss
+++ b/src/sass/pages/_contact.scss
@@ -3,15 +3,14 @@
 // ---------------------------------------------------------------------------
 
 #contact {
-  height: 70%;
-  width: 85%;
-  max-width: 700px;
-  display: flex;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  flex-flow: column;
-  transform: translate(-50%, -50%);
+
+  &-content{
+    display: flex;
+    width: 85%;
+    max-width: 700px;
+    margin: 32px auto;
+    flex-flow: column;
+  }
 
   p {
     flex: 0 1 auto;
