--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,6 +9,7 @@
 // Layout
 @import "layouts/content";
 @import "layouts/header";
+@import "layouts/social-links";
 @import "layouts/footer";
 
 // Components
