--- a/src/sass/layouts/_footer.scss
+++ b/src/sass/layouts/_footer.scss
@@ -3,7 +3,12 @@
 // ---------------------------------------------------------------------------
 
 footer {
-  margin-bottom: 12px;
+  position: absolute;
+  width: 120px;
+  bottom: 12px;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
   font-size: 14px;
   text-align: center;
 }
