--- a/src/sass/layouts/_social-links.scss
+++ b/src/sass/layouts/_social-links.scss
@@ -6,6 +6,7 @@
   position: fixed;
   bottom: 32px;
   right: 2.5%;
+  z-index: 3;
 
   @media screen and (max-width: $breakpoint-mobile) {
     position: static;
