--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -3,8 +3,9 @@
 // ---------------------------------------------------------------------------
 
 #home {
-  height: 100%;
+  height: 100vh;
   width: 100%;
+  margin-top: -56px;
   background-color: $color-base-variant;
 
   #background-image{
