--- a/src/sass/base/_typeface.scss
+++ b/src/sass/base/_typeface.scss
@@ -2,13 +2,14 @@
 // Contains everything to do with typeface (headline, body, caption, etc.)
 // ---------------------------------------------------------------------------
 
+// General mixin for text
 @mixin text(
   $font-family,
   $font-size,
   $font-weight,
   $line-height,
   $letter-spacing,
-  $text-transform: none,
+  $text-transform: none
 ) {
   font-family: $font-family;
   font-size: $font-size;
@@ -20,6 +21,7 @@
   text-transform: $text-transform;
 }
 
+// Mixin for centered headings (h1, h2). Centers text with middle lines on either side.
 @mixin centered-heading($line-size, $width, $line-color, $vertical-margin) {
   padding: $vertical-margin 0;
   text-align: center;
@@ -57,22 +59,23 @@ html {
   @include text($body-font-family, 18px, 400, 1.5, 0.5px);
   color: $color-on-background;
 
-  @media screen and (max-width: $breakpoint-mobile){
+  @media screen and (max-width: $breakpoint-mobile) {
     font-size: 14px;
   }
 }
 
-a:link {
-  color: $color-accent;
+a {
   text-decoration: none;
-}
 
-a:visited {
-  color: $color-accent-variant-dark;
-  text-decoration: none;
-}
+  &:link {
+    color: $color-accent;
+  }
 
-a:hover {
-  color: $color-accent-variant-light;
-  text-decoration: none;
+  &:visited {
+    color: $color-accent-variant-dark;
+  }
+
+  &:hover {
+    color: $color-accent-variant-light;
+  }
 }
