Enhanced Button CSS

--- a/src/sass/abstract/_variables.scss
+++ b/src/sass/abstract/_variables.scss
@@ -29,6 +29,7 @@ $color-on-background: $tundora;
 $color-on-background-variant: $mineshaft;
 $color-on-base: $gallery;
 $color-on-base-variant: $gray;
+$color-on-accent: $white;
 
 // Font Families
 @import url("https://fonts.googleapis.com/css?family=Oswald|Raleway|Share+Tech+Mono&display=swap");
