Change button font size to inherit

--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -14,7 +14,7 @@ button {
 
   // Text
   font-family: inherit;
-  font-size: 16px; // Smaller font than body
+  font-size: inherit;
   font-weight: inherit;
   line-height: inherit;
   letter-spacing: 2px; // Larger letter spacing than body
