--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -3,15 +3,14 @@
 // ---------------------------------------------------------------------------
 
 #home {
-  height: 100vh;
+  height: $content-height;
   width: 100%;
-  margin-top: -56px;
   background-color: $color-base-variant;
 
-  #background-image{
+  #background-image {
+    position: absolute;
     width: 85%;
     max-width: 700px;
-    position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -19,10 +18,9 @@
   }
 
   #greeting {
+    position: absolute;
     width: 75%;
     max-width: 420px;
-    margin: 0;
-    position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
