Added in next section button and to top button

--- a/src/sass/layouts/_sidebar-links.scss
+++ b/src/sass/layouts/_sidebar-links.scss
@@ -1,8 +1,8 @@
 // ---------------------------------------------------------------------------
-// Contains all styles related to the social media links on this site
+// Contains all styles related to the links in the sidebar
 // ---------------------------------------------------------------------------
 
-#social-links {
+#sidebar-links {
   position: fixed;
   bottom: 32px;
   right: 2.5%;
