--- a/src/sass/layouts/_content.scss
+++ b/src/sass/layouts/_content.scss
@@ -2,6 +2,10 @@
 // Contains site-wide layout styles
 // ---------------------------------------------------------------------------
 
+html{
+  scroll-behavior: smooth;
+}
+
 body {
   margin: 0;
 }
