--- a/src/sass/layouts/_sidebar-links.scss
+++ b/src/sass/layouts/_sidebar-links.scss
@@ -9,7 +9,7 @@
   z-index: 3;
 
   @media screen and (max-width: $breakpoint-mobile) {
-    // Links are now locked above the footer
+    // Links are now locked below the footer
     position: static;
   }
 
@@ -20,7 +20,6 @@
     list-style-type: none;
 
     @media screen and (max-width: $breakpoint-mobile) {
-      margin: 8px 0;
       text-align: center;
     }
 
