--- a/src/sass/pages/_contact.scss
+++ b/src/sass/pages/_contact.scss
@@ -3,13 +3,17 @@
 // ---------------------------------------------------------------------------
 
 #contact {
+  height: $content-height;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
-  &-content{
+  &-content {
     display: flex;
+    flex-direction: column;
     width: 85%;
     max-width: 700px;
-    margin: 32px auto;
-    flex-flow: column;
+    margin: auto;
   }
 
   p {
@@ -37,9 +41,6 @@
   }
 
   button {
-    width: 20%;
-    min-width: 100px;
-    max-width: 250px;
-    margin: auto;
+    margin: 0 auto;
   }
 }
