Footer is no longer absolute

--- a/src/sass/layouts/_content.scss
+++ b/src/sass/layouts/_content.scss
@@ -17,6 +17,12 @@ body {
   background-color: $color-background;
 }
 
+.page {
+  display: flex;
+  flex-direction: column;
+  min-height: $content-height;
+}
+
 .background-dark {
   background-color: $color-background-variant;
 }
