--- a/src/sass/layouts/_footer.scss
+++ b/src/sass/layouts/_footer.scss
@@ -3,10 +3,8 @@
 // ---------------------------------------------------------------------------
 
 footer {
-  position: absolute;
-  bottom: 12px;
-  left: 0;
-  right: 0;
+  margin: auto;
+  margin-bottom: 12px;
   font-size: 14px;  // Smaller text size by default
   text-align: center;
 }
