--- a/src/sass/base/_typeface.scss
+++ b/src/sass/base/_typeface.scss
@@ -34,6 +34,10 @@
     width: $width;
     margin: 0 1rem;
     transform: translateY(-0.4em);
+
+    @media screen and (max-width: $breakpoint-mobile) {
+      display: none;
+    }
   }
 }
 
