Removed to top link from sidebar. Changed name from sidebar-links to social-links

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -11,7 +11,7 @@
 // Layout
 @import "layouts/content";
 @import "layouts/header";
-@import "layouts/sidebar-links";
+@import "layouts/social-links";
 @import "layouts/footer";
 
 // Components
