--- a/src/sass/layouts/_social-links.scss
+++ b/src/sass/layouts/_social-links.scss
@@ -1,8 +1,8 @@
 // ---------------------------------------------------------------------------
-// Contains all styles related to the links in the sidebar
+// Contains all styles related to the social links in the sidebar
 // ---------------------------------------------------------------------------
 
-#sidebar-links {
+#social-links {
   position: fixed;
   bottom: 32px;
   right: 2.5%;
