Social-links are now on the left side. Added scroll to top button on right side.

--- a/src/sass/layouts/_social-links.scss
+++ b/src/sass/layouts/_social-links.scss
@@ -5,7 +5,7 @@
 #social-links {
   position: fixed;
   bottom: 32px;
-  right: 2.5%;
+  left: 2.5%;
   z-index: 3;
 
   @media screen and (max-width: $breakpoint-mobile) {
