--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -11,8 +11,9 @@
 // Layout
 @import "layouts/content";
 @import "layouts/header";
-@import "layouts/social-links";
 @import "layouts/footer";
+@import "layouts/social-links";
+@import "layouts/scroll-to-top";
 
 // Components
 @import "components/button";
