--- a/src/sass/layouts/_scroll-to-top.scss
+++ b/src/sass/layouts/_scroll-to-top.scss
@@ -3,6 +3,9 @@
 // ---------------------------------------------------------------------------
 
 #scroll-to-top {
+  display: none;
+  flex-direction: column;
+  align-items: center;
   position: fixed;
   bottom: 32px;
   right: 2.5%;
@@ -10,5 +13,10 @@
 
   img {
     width: 32px;
+  }
+
+  span{
+	  font-size: 12px;
+	  color: $color-on-background
   }
 }
