Lighter alt background color

--- a/src/sass/abstract/_variables.scss
+++ b/src/sass/abstract/_variables.scss
@@ -6,7 +6,7 @@
 $mineshaft: #222;
 $tundora: #444;
 $gray: #888;
-$gallery: #eee;
+$wild-sand: #f4f4f4;
 $white: #fff;
 
 // Colors - full color
@@ -16,7 +16,7 @@ $endeavour: #005cb2;
 
 // Colors - Semantics
 $color-background: $white;
-$color-background-variant: $gallery;
+$color-background-variant: $wild-sand;
 
 $color-base: $tundora;
 $color-base-variant: $mineshaft;
@@ -27,7 +27,7 @@ $color-accent-variant-light: $malibu;
 
 $color-on-background: $tundora;
 $color-on-background-variant: $mineshaft;
-$color-on-base: $gallery;
+$color-on-base: $wild-sand;
 $color-on-base-variant: $gray;
 $color-on-accent: $white;
 
