General outline for experience section completed. Split about scss into its sections.

--- a/src/sass/base/_typeface.scss
+++ b/src/sass/base/_typeface.scss
@@ -48,15 +48,15 @@ h1 {
 
 h2 {
   @include text($heading-font-family, 2.2rem, 300, 1.2, -0.5px, uppercase);
-  @include centered-heading(2px, 3rem, $color-on-background-variant, 1%);
+  @include centered-heading(2px, 3rem, $color-on-background-variant, 0);
 }
 
 h3 {
-  @include text($heading-font-family, 1.4rem, 400, 1.2, 0);
+  @include text($heading-font-family, 1.6rem, 400, 1.2, 0);
 }
 
 h4 {
-  @include text($heading-font-family, 1.2rem, 500, 1.2, 0);
+  @include text($heading-font-family, 1.4rem, 500, 1.2, 0);
 }
 
 html {
