--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -21,5 +21,7 @@
 
 // Page-specific styles
 @import "pages/home";
-@import "pages/about";
+@import "pages/about/about";
+@import "pages/about/about-intro";
+@import "pages/about/about-experience";
 @import "pages/contact";
