Refactored out horizontal selector

--- a/src/sass/pages/about/_about-experience.scss
+++ b/src/sass/pages/about/_about-experience.scss
@@ -61,31 +61,19 @@
     }
 
     #timeline {
+      @include horizontal-selector;
       min-height: 0;
       width: auto;
       max-width: none;
-      margin-bottom: 16px;
-      white-space: nowrap;
-      overflow: auto;
       border-left: 0;
 
       li {
-        display: inline-block;
-        padding: 4px 6px;
-        margin: 8px 0 0;
-        vertical-align: bottom;
-        border-bottom: 2px solid $color-on-background;
-        transition: padding-bottom 0.2s ease-out, margin-top 0.2s ease-out;
-
         &:before {
           display: none;
         }
 
         &.active {
-          padding-bottom: 12px;
-          margin-top: 0;
           margin-left: 0;
-          border-color: $color-accent;
         }
       }
     }
