--- a/src/sass/abstract/_mixins.scss
+++ b/src/sass/abstract/_mixins.scss
@@ -2,6 +2,31 @@
 // Contains all site-wide Sass mixins
 // ---------------------------------------------------------------------------
 
+@mixin horizontal-selector {
+  padding: 0;
+  margin: 0 0 16px;
+  white-space: nowrap;
+  overflow: auto;
+  list-style-type: none;
+
+  li {
+    display: inline-block;
+    padding: 4px 6px;
+    margin: 8px 0 0;
+    vertical-align: bottom;
+    border-bottom: 2px solid $color-on-background;
+    cursor: pointer;
+    transition: padding-bottom 0.2s ease-out, margin-top 0.2s ease-out;
+
+    &.active {
+      padding-bottom: 12px;
+      margin-top: 0;
+      color: $color-accent;
+      border-color: $color-accent;
+    }
+  }
+}
+
 // Pseudo-border(-top/-bottom) that expands and contracts from the center
 @mixin shutter-border-vertical($height, $top, $width: 0) {
   content: "";
