No outline for button on click

--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -6,6 +6,7 @@ button {
   padding: 12px 42px;
   border: 2px solid $color-accent;
   border-radius: 4px;
+  outline: none;
   color: $color-accent;
   background-color: transparent;
   // Fonts need to be inherited
